# manifest-dev

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTEXT.md  CONTRIBUTING.md  GEMINI.md  README.md  hooks  package.json  pyproject.toml  skills
.claude/: .claude-code-plugins-sync.json  settings.json
.claude-plugin/: marketplace.json
.launch/: MANIFEST.md  RAW_DUMP.md  blog-post.md  gif-script.md  launch-schedule.md  linkedin-post.md  reddit-claudeai.md  reddit-vibecoding.md  slack-claude-code-devs.md  slack-engineering-broad.md  twitter-post.md  twitter-thread.md
.manifest/: add-check-in-fallback-scheduler-2026-04-24.md  ai-slop-reviewer-coverage-2026-04-29.md  auto-goal-read-contract-2026-06-23.md  auto-outcome-gated-continuation-2026-06-24.md  babysit-pr-goal-review-hooks-2026-06-01.md  babysit-pr-log-and-check-pr-simplification-2026-06-19.md  codex-plugin-native-reviewers-skill-rename-2026-06-07.md  collapse-drive-into-do-2026-05-12.md  default-artifacts-to-home-dir-2026-06-03.md  default-docs-log-opt-outs-2026-06-29.md  default-to-amend-and-selective-verify-2026-04-26.md  define-progressive-disclosure-refactor-2026-05-01.md  drive-ci-auto-retrigger-and-15m-interval-2026-04-20.md  drive-experimental-plugin-2026-04-19.md  drive-tick-pause-leak-fix-2026-05-05.md  drive-tick-thread-hygiene-2026-04-23.md  eliminate-session-logs-and-add-handoff-2026-05-13.md  figure-out-autonomous-premature-naming-2026-06-20.md  (+44 more)
claude-plugins/: README.md
claude-plugins/manifest-dev-experimental/hooks/: hook_utils.py  pretool_verify_hook.py  pyproject.toml  stop_do_hook.py
(+386 files in other folders)
