[project]
name = "manifest-dev-hooks"
version = "0.1.0"
description = "Hooks for manifest-dev plugin"
requires-python = ">=3.10"

[project.scripts]
stop-do-hook = "stop_do_hook:main"
post-compact-hook = "post_compact_hook:main"
pretool-verify-hook = "pretool_verify_hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
