[project]
name = "manifest-dev-experimental-hooks"
version = "0.1.0"
description = "Hooks for manifest-dev-experimental plugin"
requires-python = ">=3.10"

[project.scripts]
stop-do-hook = "stop_do_hook:main"
post-compact-hook = "post_compact_hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
